--- a/index.html
+++ b/index.html
@@ -672,17 +672,17 @@
       <div class="hero-screenshot ad-container" id="ad-container">
         <!-- Google AdSense 广告单元 -->
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5020583079217470"
-             crossorigin="anonymous"></script>
-        <!-- Illustrator Hero Ad -->
-        <ins class="adsbygoogle"
-             style="display:block"
-             data-ad-client="ca-pub-5020583079217470"
-             data-ad-slot="9083571436"
-             data-ad-format="auto"
-             data-full-width-responsive="true"></ins>
-        <script>
-             (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
+     crossorigin="anonymous"></script>
+<!-- tools -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-5020583079217470"
+     data-ad-slot="8426680426"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
       </div>
     </header>
 
